2012-12-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed reading linked seek heads in Matroska
	files.

2012-11-13  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed reading file names containing a '%' from a
	.mmg settings file (both normally saved files and the job queue
	files). Fixes #795.

2012-10-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Dirac video code: Added four more
	pre-defined video types from Dirac spec v2.2.2 and two from Dirac
	Pro.

2012-09-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: enhancement: Added options for turning off
	writing "CueDuration" elements ("--engage no_cue_duration") and
	"CueRelativePosition" elements ("--engage
	no_cue_relative_positions").

	* mkvmerge: new feature: The element "CueRelativePosition" is
	written for all cue entries.

	* mkvmerge: new feature: The element "CueDuration" will be written
	for all cue entries referring to subtitle tracks.

	* mkvmerge: new feature: mkvmerge will write cues for subtitle
	tracks by default now.

	* mkvinfo: new feature: added support for the new elements
	CueDuration, CueRelativePosition and TimecodeScaleDenimonator. The
	denominator's value is only shown so far but not taken into
	account when calculating any timecode.

	* mkvpropedit, mmg, mkvmerge: removal: removed support for the
	deprecated element TrackTimecodeScale.

2012-09-02  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.8.0.

	* Build system: dropped support for gcc 4.6.0.

	* mkvpropedit: new feature: Added support for adding, deleting and
	replacing attachments.

2012-09-01  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: chapter editor: Added support for the edition
	flags "hidden", "default" and "ordered" as well as the chapter
	values "segment UID" and "segment edition UID". Implements ticket
	#736.

2012-08-30  Moritz Bunkus  <moritz@bunkus.org>

	* documentation: Added a Basque translation of mmg's guide by
	Xabier Aramendi (see AUTHORS).